# munchkin-online

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  clang-format.txt  credits.md  main.cpp  munchkin-online.cpp  munchkin-online.h  scripting_api.md
codegen/: CMakeLists.txt
codegen/include/: lua_bindings.hpp  parser.hpp
codegen/scripts/: systems.lua
codegen/src/: lua_bindings.cpp  main.cpp  parser.cpp
docs/source/: conf.py  index.rst
docs/source/api/: munchkin_battle.rst
include/: game.hpp  game_wrapper.hpp  render_wrapper.hpp
include/api/: ai_manager.hpp  ai_player.hpp  battle.hpp  card.hpp  card_loader.hpp  carddef.hpp  game.hpp  game_wrapper.hpp  gamerules.hpp  munchkin.hpp  player.hpp  state.hpp
include/assets/: asset_loaders.hpp  assets.hpp
include/cards/: card.hpp
include/game/: game.hpp  rules.hpp
include/input/: input.hpp
include/player/: aiplayer.hpp  class.hpp  player.hpp
include/renderer/: asset_loaders.hpp  assets.hpp  background_renderer.hpp  card_sprite.hpp  font.hpp  font_renderer.hpp  game_renderer.hpp  render_target.hpp  shader.hpp  sprite_renderer.hpp  state_debugger.hpp  texture.hpp  title_screen_renderer.hpp  uniform_buffer.hpp  util.hpp
include/sound/: sound_assets.hpp  sound_player.hpp
include/systems/: ai_manager.hpp  debug_terminal.hpp  game_gui_renderer.hpp  game_logger.hpp  game_renderer.hpp  input_binder.hpp  jukebox_renderer.hpp  state_debugger.hpp  title_screen_renderer.hpp
include/util/: pos_vec.h  pos_vec.hpp  util.hpp
lib/: CMakeLists.txt  SDL.h  SDL_syswm.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
scripts/: getsourcedir.py
src/: CMakeLists.txt  game.cpp  game_wrapper.cpp  main.cpp  render_wrapper.cpp
src/api/: ai_manager.cpp  ai_player.cpp  battle.cpp  card.cpp  card_loader.cpp  carddef.cpp  game.cpp  gamerules.cpp  player.cpp  state.cpp
src/assets/: asset_loaders.cpp
src/game/: aigame.cpp
src/input/: input.cpp
src/renderer/: asset_loaders.cpp  background_renderer.cpp  card_sprite.cpp  font.cpp  font_renderer.cpp  game_renderer.cpp  render_target.cpp  sprite_renderer.cpp  state_debugger.cpp  uniform_buffer.cpp  util.cpp
src/sound/: sound_player.cpp
src/systems/: ai_manager.cpp  debug_terminal.cpp  game_gui_renderer.cpp  game_logger.cpp  game_renderer.cpp  input_binder.cpp  jukebox_renderer.cpp  state_debugger.cpp  title_screen_renderer.cpp
tests/: carddata.cpp
